# template

./: cookiecutter.json
hooks/: post_get_project.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  mypy.ini  pyproject.toml  swagger-coverage-config-{{ cookiecutter.project_slug }}.json  telegram-notifier-config.ini
{{ cookiecutter.project_name }}/.github/workflows/: python.yaml
{{ cookiecutter.project_name }}/checkers/: http_checkers.py
{{ cookiecutter.project_name }}/config/: prod.yaml  stg.yaml
